Added gallery, added sponsorship, added lightbox

--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,24 @@ img {
 	opacity: 0.8;
 }
 
+#brand-image{
+   height:px;
+   line-height: 0px;
+}
+
 
 
 /* ==========================================================================
-   ABOUT US
+   MAIN
+   ========================================================================== */
+
+
+
+
+
+
+/* ==========================================================================
+   GALLERY
    ========================================================================== */
 
 
